fix: change overflow property to hidden for trigger and valueText slots

--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -19,7 +19,7 @@
 
 [slot="trigger"], ::slotted([slot="valueText"]) {
   display: block;
-  overflow: auto;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
